cmake_minimum_required(VERSION 2.8)

project(geolines)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "Release")
endif()
string(TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE)

message(STATUS "C++ compiler ID = ${CMAKE_CXX_COMPILER_ID}")
if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
  set(MY_CXX_FLAGS "") # -Wall -Wextra -Wshadow -Weffc++ -pedantic -Werror")
elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
  set(MY_CXX_FLAGS "-Wall -Wextra -Wshadow -Weffc++ -pedantic -Werror")
elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL "Intel")
  set(MY_CXX_FLAGS "-Wall -Wextra -Wshadow -pedantic -Werror")
else()
  message(WARNING "Unknown compiler!")
  set(MY_CXX_FLAGS "")
endif()

if(${BUILD_TYPE} STREQUAL "DEBUG")
  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${MY_CXX_FLAGS} -fno-inline")
  message("Debug flags: ${CMAKE_CXX_FLAGS_DEBUG}")
elseif(${BUILD_TYPE} STREQUAL "RELEASE")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${MY_CXX_FLAGS}")
  message("Release flags: ${CMAKE_CXX_FLAGS_RELEASE}")
else()
  message(FATAL_ERROR "Unknown build type: ${BUILD_TYPE}")
endif()

set(MFEM_DIR "/u/artemyev/software/mfem-3.0.1") # "/u/artemyev/projects/mfem")
#if(BUILD_TYPE STREQUAL DEBUG)
#  set(MFEM_BUILD "serialdebug")
#else()
#  set(MFEM_BUILD "serial")
#endif()
include_directories(${MFEM_DIR})
#include_directories(${MFEM_DIR}/${MFEM_BUILD})

link_directories(${MFEM_DIR}) #/${MFEM_BUILD})

add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} mfem)
